--- a/docs/4/modules/ident.yml
+++ b/docs/4/modules/ident.yml
@@ -1,12 +1,12 @@
 name: ident
 
 description: |-
-  This module allows the usernames (idents) of users to be looked up using the [RFC 1413 Identification Protocol](https://www.ietf.org/rfc/rfc1413.txt). This is useful for shared hosts where many users may be connecting from one IP address as it allows you to ban specific users without banning the entire provider.
+  This module allows the usernames (idents) of users to be looked up using the [RFC 1413 Identification Protocol](https://www.ietf.org/rfc/rfc1413.txt). This mostly not necessary but can be useful for shared hosts where many users may be connecting from one IP address as it allows you to ban specific users without banning the entire provider.
 
 configuration:
 - name: connect
   description: |-
-    This module extends [the core `<connect>` tags](/{{ version }}/configuration#connect) with the following fields:
+    This module extends [the core `<connect>` tags](/4/configuration#connect) with the following fields:
   extends: true
   attributes:
   - name: useident
@@ -63,4 +63,6 @@ configuration:
     ```
 
 special_notes: |-
-  If you are also using [the gateway module](/{{ version }}/modules/gateway) you should disable ident lookups for your WebIRC gateway.
+  If you are also using [the gateway module](/4/modules/cgiirc) you should disable ident lookups for your WebIRC gateway.
+
+  It is recommended that you only enable ident lookups for hosts that you know are shared as performing ident lookups makes connecting to a server slower.
