Fix some issues with the v3 docs.

--- a/docs/3/modules/anticaps.yml
+++ b/docs/3/modules/anticaps.yml
@@ -32,7 +32,7 @@ chmodes:
   - name: anticaps
     char: B
     type: Parameter
-    syntax: <ban|block|mute|kick|kickban>:<minlen>:<percent>
+    syntax: '{ban|block|mute|kick|kickban}:<minlen>:<percent>'
     usable_by: Channel operators
     description: |-
       Enables blocking excessively capitalised messages.
