--- a/docs/4/modules/services.yml
+++ b/docs/4/modules/services.yml
@@ -16,6 +16,13 @@ chmodes:
 
 umodes:
   chars:
+  - name: servprotect
+    char: k
+    type: Switch
+    syntax: null
+    usable_by: Servers
+    description: |-
+      Protects services pseudoclients against kicks, kills, and channel prefix mode changes.
   - name: u_registered
     char: r
     type: Switch
