--- a/docs/3/modules/sslinfo.yml
+++ b/docs/3/modules/sslinfo.yml
@@ -86,12 +86,20 @@ configuration:
     required: false
     default: 'No'
     description: |-
-      Whether user TLS (SSL) certificate fingerprints are only visible to server operators.
+      Whether TLS (SSL) client certificate fingerprints are only visible to server operators.
+  - name: warnexpiring
+    type: Duration
+    required: false
+    default: 0s
+    description: |-
+      The maximum amount of time left that can be left on a TLS (SSL) client certificate fingerprint before clients start being warned of the expiration time. If set to 0s then no warning will be sent.
+
   details: ""
   example: |-
     ```xml
     <sslinfo hash="sha-256"
-             operonly="no">
+             operonly="no"
+             warnexpiring="1w">
     ```
 
 commands:
