--- a/docs/4/modules/ssl_mbedtls.yml
+++ b/docs/4/modules/ssl_mbedtls.yml
@@ -171,3 +171,5 @@ configuration:
 
 special_notes: |-
   If you are having trouble getting InspIRCd to read your .pem files then check that it has read access to the full path up to the location of them. If you are using a system that uses AppArmor you may need to edit the AppArmor profile to allow InspIRCd to read them too.
+
+  If you are using Let's Encrypt and are having problems with missing intermediate certificates then make sure you are using fullchain.pem from Certbot/Dehydrated/etc in `<sslprofile:certfile>` instead of cert.pem as the latter does not contain intermediate certificates.
